# TorchApp

./: .gitignore  CMakeLists.txt  README.md  TorchApp.sln  build.bat
TorchApp/: TorchApp.cpp  TorchApp.h  TorchApp.vcxproj  TorchApp.vcxproj.filters  TorchCRNN.cpp  TorchCRNN.h  TorchClassify.cpp  TorchClassify.h  TorchDetect.cpp  TorchDetect.h  TorchFinal.cpp  TorchFinal.h  TorchKeyPoint.cpp  TorchKeyPoint.h  TorchRegress.cpp  TorchRegress.h  TorchSegment.cpp  TorchSegment.h
test/: colors.txt  test.cpp  test.vcxproj  test.vcxproj.filters  分块分割.cpp
test/FasterRCNN/: settings_model.xml
test/KeyPointRCNN/: settings_model.xml
test/MaskRCNN/: labels.txt  settings_detect.xml  settings_model.xml
test/classify/: settings_classify.xml  settings_model.xml
test/crnn/: labels.txt  settings_model.xml
test/regress/: settings_model.xml
test/yolo11/: settings_detect.xml  settings_model.xml
test/yolo11pose/: settings_detect.xml  settings_model.xml
test/yolo11seg/: settings_detect.xml  settings_model.xml
test/yolo26/: labels.txt  settings_detect.xml  settings_model.xml
test/yolo26pose/: settings_detect.xml  settings_model.xml
test/yolo26seg/: labels.txt  settings_detect.xml  settings_model.xml
